# automation_hub

./: README.md  alembic.ini  pyproject.toml
config/: settings.py
src/: init.py  main.py
src/core/api/v1/: router.py
src/core/api/v1/dependencies/: auth_dependencies.py  common_dependencies.py  user_dependencies.py
src/core/api/v1/endpoints/: auth.py  user.py
src/core/application/commands/: common_commands.py
src/core/application/commands/auth/: login_user_command.py
src/core/application/commands/user/: change_password_comand.py  create_user_command.py  deactivate_user_command.py  delete_user_command.py  update_user_command.py
src/core/application/handlers/: common_handlers.py
src/core/application/handlers/auth/: login_user_handler.py
src/core/application/handlers/user/: change_password_handler.py  create_user_handler.py  deactivate_user_handler.py  delete_user_handler.py  get_user_by_id_handler.py  get_users_handler.py  update_user_handler.py
src/core/application/queries/: common_queries.py
src/core/application/queries/user/: get_user_by_id_query.py  get_user_query.py  (+1 more)
src/core/application/services/: auth_service.py  user_service.py
src/core/decorators/: exception_handler.py
src/core/domain/exceptions/: auth.py  user.py
src/core/domain/models/: auth.py  user.py
src/core/infrastructure/containers/: auth_container.py  common_container.py  user_container.py
src/core/infrastructure/database/: db.py
src/core/infrastructure/repositories/: base.py  common_repository.py  user_repository.py
src/utils/: exceptions.py  utils.py
(+5 files in other folders)
